[gd_scene load_steps=22 format=3 uid="uid://bwd2mhps22xg6"]

[ext_resource type="Texture2D" uid="uid://bsku73kfwy7y6" path="res://Art/New/Objects/Destructibles/Respawn/destructible_respawn.png" id="1_61t01"]
[ext_resource type="Script" uid="uid://cbohrkutkl082" path="res://Objects/Destructible/destructible_respawn_heath_manager.gd" id="2_61t01"]
[ext_resource type="Texture2D" uid="uid://txnk6wk1pctb" path="res://Art/New/Objects/Destructibles/Respawn/respawn_break.png" id="3_h67qk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h67qk"]
size = Vector2(32, 32)

[sub_resource type="Animation" id="Animation_h67qk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_61t01")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_83hp8"]
resource_name = "break"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_h67qk")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0.6]
}

[sub_resource type="Animation" id="Animation_p4oip"]
resource_name = "broken"
length = 0.1
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_h67qk")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0.6]
}

[sub_resource type="Animation" id="Animation_h0sf0"]
resource_name = "build"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_h67qk")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [4, 3, 2, 1, 0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0.6]
}

[sub_resource type="Animation" id="Animation_61t01"]
resource_name = "solid"
length = 0.1
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_61t01")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_83hp8"]
_data = {
&"RESET": SubResource("Animation_h67qk"),
&"break": SubResource("Animation_83hp8"),
&"broken": SubResource("Animation_p4oip"),
&"build": SubResource("Animation_h0sf0"),
&"solid": SubResource("Animation_61t01")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_h67qk"]
animation = &"break"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5xl8w"]
animation = &"broken"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yfasb"]
animation = &"build"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_83hp8"]
animation = &"solid"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_p4oip"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_h0sf0"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_evcss"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5d1su"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hpaw2"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_83hp8"]
states/break/node = SubResource("AnimationNodeAnimation_h67qk")
states/break/position = Vector2(567, 171)
states/broken/node = SubResource("AnimationNodeAnimation_5xl8w")
states/broken/position = Vector2(710, 100)
states/build/node = SubResource("AnimationNodeAnimation_yfasb")
states/build/position = Vector2(567, 36)
states/solid/node = SubResource("AnimationNodeAnimation_83hp8")
states/solid/position = Vector2(364, 100)
transitions = ["solid", "break", SubResource("AnimationNodeStateMachineTransition_p4oip"), "Start", "solid", SubResource("AnimationNodeStateMachineTransition_h0sf0"), "broken", "build", SubResource("AnimationNodeStateMachineTransition_evcss"), "break", "broken", SubResource("AnimationNodeStateMachineTransition_5d1su"), "build", "solid", SubResource("AnimationNodeStateMachineTransition_hpaw2")]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_83hp8"]
size = Vector2(32, 32)

[node name="DestructibleRespawn" type="StaticBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_h67qk")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_61t01")

[node name="DestructibleHeathManager" type="Node" parent="." node_paths=PackedStringArray("anim_tree", "collision", "reset_timer", "collidecheck_area")]
script = ExtResource("2_61t01")
anim_tree = NodePath("../AnimationTree")
collision = NodePath("../CollisionShape2D")
reset_timer = NodePath("../Timer")
collidecheck_area = NodePath("../Area2D")
metadata/_custom_type_script = "uid://pfvi83ehojik"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_83hp8")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_83hp8")
anim_player = NodePath("../AnimationPlayer")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_83hp8")
debug_color = Color(0.41105968, 0.3295046, 1, 0.41960785)

[connection signal="animation_finished" from="AnimationTree" to="DestructibleHeathManager" method="_on_animation_tree_animation_finished"]
[connection signal="timeout" from="Timer" to="DestructibleHeathManager" method="_on_timer_timeout"]
